--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/router": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "primeng": "15.0.0-rc.1",
+    "primeicons": "6.0.1",
+    "paper": "0.12.17"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
@@ -33,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "prettier": "2.8.1"
   }
 }
